@@ -1,3 +1,9 @@
+2004-08-03  Karl Runge <runge@karlrunge.com>
+	* add man page x11vnc.1 autogenerated from x11vnc -help; tweak
+	  help output a little bit.  Adjust autoconf to pick up manpage.
+	* add README from website docs.
+	* zero watch_bell and use_xkb_modtweak if no XKEYBOARD
+
 2004-07-31  Karl Runge <runge@karlrunge.com>
 	* -cursorpos now the default; make cursorpos work when scaling
 	* fix bug with multiple adds of the same keysym for -add_keysyms
